# thermodynamic-illumination-public

./: README.md  REPRODUCE.md  pyproject.toml  reproduce_results.py  requirements.txt
core/: fast_uniform_sampler.py  phase_transition.py  thermo_sampler_v3.py
demos/: demo_cppn_regularizer.py  demo_restoration_suite.py  demo_sparse_reconstruction.py
experiments/: RES181_threshold_sensitivity.py  RES_151_threshold_variance.py  ablation_hybrid_spectral.py  activation_composition_order.py  activation_distribution.py  activation_gradient_flow_experiment.py  activation_gradient_uniformity_experiment.py  activation_mixing.py  activation_patterns_experiment.py  activation_saturation_order.py  activation_sign_flip.py  activation_sparsity_gradient.py  activation_trajectory_curvature.py  activation_variance_order.py  activation_variance_res138.py  activation_velocity.py  algorithmic_mi_experiment.py  aspect_ratio_order.py  basin_volume.py  batch_correlation.py  batch_generator_v2.py  betti_number_order.py  bias_removal_benefit_experiment.py  bias_removal_mechanism.py  bias_removal_res135.py  bias_role_experiment.py  bit_precision_order.py  bits_vs_threshold_curve.py  boundary_curvature_experiment.py  boundary_effects_experiment.py  boundary_gradient_direction.py  boundary_structure_experiment.py  classification_tradeoff.py  classification_tradeoff_quick.py  component_correlation.py  comprehensive_scaling_law.py  compress_gate_bottleneck_final.py  compression_agreement_experiment.py  compression_saturation_res204.py  compression_theory_experiment.py  (+359 more)
paper/: ax.tar  (+1 more)
(+370 files in other folders)
