[project]
name = "monochrome-noise-converger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0",
    "pdfplumber>=0.11.8",
    "pywavelets>=1.9.0",
    "numba>=0.63.1",
    "tqdm>=4.67.1",
]
